# open-pencil

./: .coderabbit.yaml  .dockerignore  .env.development.example  .env.e2e.example  .env.example  .env.local.example  .env.prod.example  .env.production.example  .gitattributes  .gitignore  .gitleaks.toml  .lfsconfig  .mcp.json  .oxfmtrc.json  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOY-NOW.md  DEPLOY.md  Dockerfile  PLAN.md  PROJET.md  README.md  ROADMAP.md  SDK-PLAN.md  SECURITY.md  bunfig.toml  components.d.ts  docker-compose.yml  fly.toml  index.html  knip.json  lol.fig  mcp.config.json  oxlint.json  oxlint.structure.json  package.json  plan-refactor.md  (+6 more)
.github/: PULL_REQUEST_TEMPLATE.md
.storybook/: preview.ts
design/: dashboard-guest.fig  dashboard-jfet.fig  replay-core.fig  replay-core.pen  replay-marketing.fig  replay-marketing.pen  replay-settings.fig  replay-settings.pen
design-kits/: registry.json
desktop/: .gitignore  Cargo.toml  Info.plist  tauri.conf.json  updater.key.pub
desktop/capabilities/: default.json
desktop/icons/: icon.icns
desktop/src/: fig_container.rs  fonts.rs  http.rs  lib.rs  main.rs  menu.rs  menu_events.rs  window.rs
docs/: README.md  ai-chat-design.md  architecture.md  design-to-code-overview.md  eval-command.md  font-management.md  i18n-audit.md  i18n.md  mcp-codegen-plan.md  pen-format-compat.md
examples/: dashboard.design  design-system.design  hello-world.design  landing-page.design
lint/: plugin.js
public/: _headers  benchmark.html  welcome.fig
scripts/: analyze-pattern-oracle.ts  (+20 more)
(+1676 files in other folders)
